fix: correct ContentItem constructor parameter order and path handling
- Fixed parameter order in ContentItem constructor calls to match the record definition
- Improved path normalization in FileSystemContentRepository
- Ensured directory paths consistently end with a slash
- Updated tests to work with simplified ContentItem model